# IAIA-ros-corobot-tutorial

./: README.md
indy10_gazebo/launch/: indy10_moveit_gazebo.launch
indy10_moveit_config/config/: joint_limits.yaml
indy_driver/: CMakeLists.txt
indy_driver/launch/: indy_interface.launch
indy_driver/src/: demo_grip.py  demo_move.py  demo_move_with_camera.py  image_processing.py  indy_socket_driver.cpp  move_group_python_interface.py
rg2_description/launch/: rg2_rviz.launch
rg2_description/meshes/inertia/: RG2_Hand.txt  RG2_LeftFinger.txt  RG2_LeftMomentArm.txt  RG2_LeftTrustArm.txt  RG2_RightFinger.txt  RG2_RightMomentArm.txt  RG2_RightTrussArm.txt
rg2_description/urdf/: rg2_urdf.xacro
tutorial/: install-ros-packages-for-robot.md  install-ros.md  install-ubuntu.md  install-utility-programs.md  robot-execution-indy10.md  robot-execution-ur5e.md  setting-indy10.md  setting-ur5e.md  simulation-indy10.md  simulation-ur5e.md  trouble-hangeul-key.md  tutorial-ros-build-system-roscpp.md  tutorial-ros-build-system-rospy.md  tutorial-ros-build-system.md  tutorial-ros-camera.md  tutorial-ros-package.md  tutorial-ros-talker-listener.md  tutorial-ros-turtlesim.md  tutorial-rviz-moveit.md  tutorial-simulation-moveit.md  tutorial-ubuntu-basic-command.md
ur5e_rg2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5e_rg2_moveit_config/config/: fake_controllers.yaml  gazebo_ur5e_robot.urdf  ur5e_robot.srdf
ur5e_rg2_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
ur_python/: CMakeLists.txt  package.xml
ur_python/src/: camera.py  demo_grip.py  demo_move.py  demo_move_with_camera.py  demo_pick_and_place.py  demo_standby.py  image_processing.py  move_group_python_interface.py
